force-app/main/default/objects/Adjust_Deposit__c/Adjust_Deposit__c.object-meta.xml
<CustomObject>
    <label>Adjust Deposit</label>
    <nameField>
        <displayFormat>AD-{0000000000}</displayFormat>
        <label>Adjust Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjust Deposit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>