force-app/main/default/objects/Adjust_Deposit__c/fields/Nominal_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Adjust__c</fullName>
    <label>Nominal Adjust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>