force-app/main/default/objects/Adjust_Deposit__c/fields/Nomor_Kartu_Brizzi__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kartu_Brizzi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Kartu Brizzi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>