force-app/main/default/objects/Adjust_Deposit__c/fields/Reduce_Balance__c.field-meta.xml
<CustomField>
    <fullName>Reduce_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce Balance</label>
    <type>Checkbox</type>
</CustomField>