force-app/main/default/objects/Adjust_Deposit__c/fields/Saldo_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Kartu__c</fullName>
    <label>Saldo Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>