force-app/main/default/objects/Adjust_Deposit__c/fields/Status_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Status_Adjust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Adjust</label>
    <type>Checkbox</type>
</CustomField>