force-app/main/default/objects/Adjust_Deposit__c/fields/Status_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Status_Kartu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>